# databento-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build.yaml  release.yaml
examples/: historical.rs  live.rs  live_smoke_test.rs  reference.rs  split_symbols.rs
scripts/: build.sh  get_version.sh  lint.sh  test.sh
src/: deserialize.rs  error.rs  historical.rs  lib.rs  live.rs  reference.rs
src/historical/: batch.rs  client.rs  metadata.rs  mod.rs  symbology.rs  timeseries.rs
src/live/: client.rs  protocol.rs
src/reference/: adjustment.rs  corporate.rs  enums.rs  security.rs
tests/: historical-example.rs  live-example.rs
