[package]
name = "databento"
authors = ["Databento <support@databento.com>"]
version = "0.11.0"
edition = "2021"
repository = "https://github.com/databento/databento-rs"
description = "Official Databento client library"
license = "Apache-2.0"
# maximum of 5
keywords = ["real-time", "historical", "market-data", "trading", "tick-data"]
# see https://crates.io/category_slugs
categories = ["api-bindings", "finance"]

[package.metadata.docs.rs]
# Document all features on docs.rs
all-features = true
# To build locally: `RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --open`
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["historical", "live"]
historical = ["dep:futures", "dep:reqwest", "dep:serde", "dep:tokio-util", "dep:serde_json", "tokio/fs"]
live = ["dep:hex", "dep:sha2", "tokio/net"]

[dependencies]
# binary encoding
dbn = { version = "0.18.1", features = ["async", "serde"] }
# Async stream trait
futures = { version = "0.3", optional = true }
# Used for Live authentication
hex = { version = "0.4", optional = true }
log = "0.4"
# HTTP client for historical API
reqwest = { version = "0.12", optional = true, features = ["json", "stream"] }
# JSON deserialization for historical API
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
# Used for Live authentication
sha2 = { version = "0.10", optional = true }
thiserror = "1.0"
time = { version = ">=0.3.35", features = ["macros", "parsing", "serde"] }
tokio = { version = ">=1.28", features = ["io-util", "macros"] }
# Stream utils
tokio-util = { version = "0.7", features = ["io"], optional = true }
typed-builder = "0.18"

[dev-dependencies]
env_logger = "0.11.2"
tokio = { version = "1.38", features = ["full"] }
wiremock = "0.6"
